# mobile_robot_perception

./: CMakeLists.txt  README.md  package.xml
include/mobile_robot_perception/: laser_scan_processor.h  scan_sector_measurement.h
src/: laser_scan_processor.cpp  scan_processor_node_test.cpp  scan_sector_measurement.cpp
tests/: test_laser_scan_processor.cpp  test_scan_sector_measurements.cpp
