<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot_perception</name>
  <version>0.0.0</version>
  <description>Package with perception modules for mobile robots</description>

  <maintainer email="px@todo.todo">px</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>

  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>